# pog

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  boxfilter.h  compile_commands.json  filter.h  glfw_utils.cpp  glfw_utils.h  imgui.ini  insp  launch.h  main.cpp  pog.cpp  pog.h  shortcut.pog
.cache/clangd/index/: context.c.C0C2C0136EBB9772.idx  egl_context.c.24BE3D546A7CFC6A.idx  glad.c.3A81EB3424106DAD.idx  glad.h.0BAE553402A26AA5.idx  glfw3.h.F85D097C0ACE880A.idx  glx_context.c.0E61674225912380.idx  imconfig.h.375991B5DCEEB989.idx  imgui.cpp.D9008150A5B34E23.idx  imgui.h.FBAA5B778F1C1B6D.idx  imgui_demo.cpp.D0F4D09E5842FA8E.idx  imgui_draw.cpp.EC1C0DA3C8686024.idx  imgui_impl_glfw.cpp.4E2DBFFFA389814A.idx  imgui_impl_glfw.h.B2DB30A2528902E8.idx  imgui_impl_opengl2.cpp.2B5FCAC092F72C85.idx  imgui_impl_opengl2.h.AD4714B55981C531.idx  imgui_impl_opengl3.cpp.4D7EC4D3FF666233.idx  imgui_impl_opengl3.h.F4E534BAA2FDC355.idx  imgui_impl_opengl3_loader.h.4E35CC2136E14E49.idx  imgui_internal.h.FE3F5C470EBDA65B.idx  imgui_tables.cpp.E69CF0BC33A9A9BA.idx  imgui_widgets.cpp.B1BF7171D86A47D3.idx  imstb_rectpack.h.C01B29CB9F0622B5.idx  imstb_textedit.h.9F5B516CC15FACED.idx  imstb_truetype.h.3502EF045CE95505.idx  init.c.0F52B12DF5B87187.idx  input.c.367BD20E95462550.idx  internal.h.C57B1EE3E5BACC79.idx  khrplatform.h.3121D6AED599A6B4.idx  linux_joystick.c.669BFE0D16C6BE4B.idx  linux_joystick.h.BB1A51C0BA48F0EB.idx  main.cpp.36C69B524AB5A6E7.idx  mappings.h.E1D4ECFAD437F9B6.idx  monitor.c.7AEC9732AEDD1F08.idx  null_init.c.686585681C64B2EF.idx  null_joystick.c.6D62C4CCD50CFD30.idx  null_joystick.h.547B68C437E3973D.idx  null_monitor.c.962A9F1703937A12.idx  null_platform.h.CACB18B8C30028EF.idx  null_window.c.9318C06D8C4C485A.idx  (+18 more)
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
